contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/oapp/fail/non_struct_input.rs
// UI (trybuild) negative test: `#[oapp]` must be applied to a struct.

use oapp_macros::oapp;

#[oapp]
pub enum NotAStruct {
    A,
}

fn main() {}
